# detvm

./: CMakeLists.txt  README.md  example.dvm  tmp.txt
asm/: CMakeLists.txt
asm/inc/: assemble.hpp  detvm.hpp  helpers.hpp  linker.hpp
asm/src/: asmmain.cpp  assembler.cpp  constant_pool.cpp  disasm.cpp  helpers.cpp  ldmain.cpp  linker.cpp  main.cpp  reader.cpp  writer.cpp
deltora/: CMakeLists.txt
deltora/inc/: ast.hpp  emit.hpp  expr_ast.hpp  lexer.hpp  literal.hpp  node_macros.hpp  parser.hpp  stmt_ast.hpp  token.hpp  typecheck.hpp
deltora/src/: ast.cpp  emit.cpp  lexer.cpp  main.cpp  parser.cpp  typecheck.cpp
docs/examples/detasm/: factorial.detasm  helloworld.detasm  main.detasm
docs/tests/: expectedout.txt  expectedvmout.txt
inc/: assemble.hpp  constant_pool.hpp  detvm.hpp  helpers.hpp  linker.hpp  ops.hpp  reader.hpp  writer.hpp
src/: assembler.cpp  helpers.cpp  linker.cpp  main.cpp  ops.cpp  vm.cpp
vm/: CMakeLists.txt
vm/src/: loadprogram.cpp  main.cpp  ops.cpp  vm.cpp
